# mm_project_sss2019

./: .gitignore  LICENSE  README.md  nvt_mc.ipynb  sample_config1.xyz
Day_1/: 01_MC_NVT.tex  README.md  day_1.py  domcnvt.sh  instructor_script.ipynb  minimumImage.eps  pbc.eps  references.bib
Day_2/: README.md  day_2.py  test_mc.py
Day_3/: README.md  day_3.py  monte_carlo_oop.py  test_mc.py
Day_4/: README.md
Day_4/mm_project/: README.md  appveyor.yml  setup.py
Day_4/mm_project/devtools/conda-envs/: test_env.yaml
Day_4/mm_project/docs/: Makefile  README.md  conf.py
Day_4/mm_project/mm_project/: monte_carlo.py
Day_4/mm_project/mm_project/tests/: test_coordinates.py  test_mm_project.py  test_monte_carlo.py  test_potential.py
Day_5/: README.md  build.sh  day_5.cpp
Day_6/: CMakeLists.txt  README.md  day_6.py  install_linux.sh
Day_6/mm_cpp/: CMakeLists.txt  build.sh  day_6.cpp  day_6.hpp  export.cpp
Day_6/mm_project/: .lgtm.yml  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  setup.cfg  setup.py
Day_6/mm_project/devtools/: README.md
Day_6/mm_project/docs/: index.rst  make.bat
Day_6/mm_project/mm_project/: __init__.py  _version.py  coordinates.py  monte_carlo.py  potential.py
Day_6/mm_project/mm_project/data/: nist_sample_config1.txt
Day_6/mm_project/mm_project/tests/: conftest.py
